FIX: fix navbar effect on Firefox by changing backdrop-filter to brightness(2)

--- a/styles.css
+++ b/styles.css
@@ -113,7 +113,7 @@ a {
 }
 
 .NavBar li:hover {
-  backdrop-filter: blur(30px);
+  backdrop-filter: brightness(2);
 }
 
 .NavBarButton:hover {
